; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_dirhash.c_delete_entry.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/cdmake/extr_dirhash.c_delete_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.target_dir_hash = type { %struct.target_dir_entry** }
%struct.target_dir_entry = type { i64, %struct.target_dir_entry* }

@NUM_DIR_HASH_BUCKETS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.target_dir_hash*, %struct.target_dir_entry*)* @delete_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delete_entry(%struct.target_dir_hash* %0, %struct.target_dir_entry* %1) #0 {
  %3 = alloca %struct.target_dir_hash*, align 8
  %4 = alloca %struct.target_dir_entry*, align 8
  %5 = alloca %struct.target_dir_entry**, align 8
  store %struct.target_dir_hash* %0, %struct.target_dir_hash** %3, align 8
  store %struct.target_dir_entry* %1, %struct.target_dir_entry** %4, align 8
  %6 = load %struct.target_dir_hash*, %struct.target_dir_hash** %3, align 8
  %7 = getelementptr inbounds %struct.target_dir_hash, %struct.target_dir_hash* %6, i32 0, i32 0
  %8 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %7, align 8
  %9 = load %struct.target_dir_entry*, %struct.target_dir_entry** %4, align 8
  %10 = getelementptr inbounds %struct.target_dir_entry, %struct.target_dir_entry* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @NUM_DIR_HASH_BUCKETS, align 8
  %13 = urem i64 %11, %12
  %14 = getelementptr inbounds %struct.target_dir_entry*, %struct.target_dir_entry** %8, i64 %13
  store %struct.target_dir_entry** %14, %struct.target_dir_entry*** %5, align 8
  br label %15

15:                                               ; preds = %26, %2
  %16 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  %17 = load %struct.target_dir_entry*, %struct.target_dir_entry** %16, align 8
  %18 = icmp ne %struct.target_dir_entry* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  %21 = load %struct.target_dir_entry*, %struct.target_dir_entry** %20, align 8
  %22 = load %struct.target_dir_entry*, %struct.target_dir_entry** %4, align 8
  %23 = icmp ne %struct.target_dir_entry* %21, %22
  br label %24

24:                                               ; preds = %19, %15
  %25 = phi i1 [ false, %15 ], [ %23, %19 ]
  br i1 %25, label %26, label %30

26:                                               ; preds = %24
  %27 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  %28 = load %struct.target_dir_entry*, %struct.target_dir_entry** %27, align 8
  %29 = getelementptr inbounds %struct.target_dir_entry, %struct.target_dir_entry* %28, i32 0, i32 1
  store %struct.target_dir_entry** %29, %struct.target_dir_entry*** %5, align 8
  br label %15

30:                                               ; preds = %24
  %31 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  %32 = load %struct.target_dir_entry*, %struct.target_dir_entry** %31, align 8
  %33 = icmp ne %struct.target_dir_entry* %32, null
  br i1 %33, label %34, label %40

34:                                               ; preds = %30
  %35 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  %36 = load %struct.target_dir_entry*, %struct.target_dir_entry** %35, align 8
  %37 = getelementptr inbounds %struct.target_dir_entry, %struct.target_dir_entry* %36, i32 0, i32 1
  %38 = load %struct.target_dir_entry*, %struct.target_dir_entry** %37, align 8
  %39 = load %struct.target_dir_entry**, %struct.target_dir_entry*** %5, align 8
  store %struct.target_dir_entry* %38, %struct.target_dir_entry** %39, align 8
  br label %40

40:                                               ; preds = %34, %30
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
